--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -8,7 +8,7 @@
 }
 // header
 .header {
-  padding-right: 0;
-  padding-left: 0;
-  padding-bottom: 0;
+  padding-right: 0 !important;
+  padding-left: 0 !important;
+  padding-bottom: 0 !important;
 }
