--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -3,7 +3,8 @@
 #menu {
   background-image: linear-gradient(#fff, #dcdcdc);
   a {
-    color: #000
+    color: #000;
+    padding: 10px 7px;
   }
 }
 // header
