chore(styles): full banner

--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -13,3 +13,11 @@
   padding-left: 0 !important;
   padding-bottom: 0 !important;
 }
+// full banner
+@media(min-width: 768px) {
+  .banner-slider {
+      max-width: 100%;
+      --banner-aspect-ratio: 1!important;
+      height: auto;
+  }
+}
