--- a/template/pages/@/head.ejs
+++ b/template/pages/@/head.ejs
@@ -10,6 +10,9 @@ if ('serviceWorker' in navigator) {
 }
 </script>
 <link rel="stylesheet" type="text/css" href="/storefront.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Teko:wght@400;700&display=swap" rel="stylesheet">
 
 <%
 // inject custom code
