feat: new footer

--- a/template/pages/@/head.ejs
+++ b/template/pages/@/head.ejs
@@ -12,7 +12,7 @@ if ('serviceWorker' in navigator) {
 <link rel="stylesheet" type="text/css" href="/storefront.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Teko:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Teko:wght@400;500;700&display=swap" rel="stylesheet">
 
 <%
 // inject custom code
