--- a/template/pages/@/layout/footer.ejs
+++ b/template/pages/@/layout/footer.ejs
@@ -3,22 +3,13 @@
 const footer = _.cms('footer') || {}
 const contacts = _.cms('contacts') || {}
 
-// social networks handled by contacts
-const networksWithColors = [
-  ['facebook', '#3b5998'],
-  ['youtube', '#ff0000'],
-  ['instagram', '#e1306c'],
-  ['twitter', '#1da1f2'],
-  ['tiktok', '#000000'],
-  ['pinterest', '#bd081c'],
-  ['linkedin', '#0073b1']
-]
+const { path } = _.route
 %>
 
 <footer class="footer py-3 py-lg-4 py-xl-5">
   <div class="container">
     <div class="row">
-      <div class="col-12 col-lg-auto order-lg-last pl-xl-4">
+      <div class="col-12 col-md-3 col-lg order-lg-last pl-xl-4">
         <div class="footer__contacts">
           <% if (footer.contacts.title) { %>
             <div class="footer__title">
@@ -77,26 +68,14 @@ const networksWithColors = [
 
           <% if (footer.contacts.socials) { %>
             <p class="footer__social">
-              <% networksWithColors.forEach(([network, color]) => { %>
-                <% if (contacts[network]) { %>
-                  <a
-                    href="<%= contacts[network] %>"
-                    target="_blank"
-                    rel="noopener"
-                    aria-label="<%= network %>"
-                    style="color: <%= color %>"
-                  >
-                    <i class="fab fa-<%= network %>"></i>
-                  </a>
-                <% } %>
-              <% }) %>
+              <%- await include('/@/layout/inc/networks', { _, contacts }) %>
             </p>
           <% } %>
         </div>
       </div>
 
       <% if (footer.links_1.list_pages || footer.links_1.list.find(({ url }) => url)) { %>
-        <div class="col-12 col-sm-6 col-lg col-xl-auto px-xl-4">
+        <div class="col-12 col-md-3 col-lg px-xl-4">
           <a
             class="footer__title"
             data-toggle="collapse"
@@ -137,7 +116,7 @@ const networksWithColors = [
       <% } %>
 
       <% if (footer.links_2.list_categories || footer.links_2.list.find(({ url }) => url)) { %>
-        <div class="col-12 col-sm-6 col-lg col-xl-auto px-xl-4">
+        <div class="col-12 col-md-3 col-lg px-xl-4">
           <a
             class="footer__title"
             data-toggle="collapse"
@@ -178,24 +157,14 @@ const networksWithColors = [
         </div>
       <% } %>
 
-      <div class="col-12 col-xl order-lg-first">
-        <h2 class="footer__title footer__store">
-          <%= footer.description.title || _.settings.name %>
-        </h2>
-        <p><%- footer.description.text || _.settings.description %></p>
+      <div class="col-12 col-md-3 col-lg order-lg-first">
+        <% if (path === '/' || path === '/index') { %> 
+          <h1  class="footer__title footer__store" itemprop="name"><%= footer.description.title || _.settings.name %></h1>
+        <% } else { %>
+          <h2  class="footer__title footer__store"><%= footer.description.title || _.settings.name %></h2>
+        <% } %>
+        <h4><%- footer.description.text || _.settings.description %></h4>
 
-        <div class="mt-4 mb-3">
-          <p class="footer__payment-methods">
-            <% Object.keys(footer.payment_methods).forEach(method => { %>
-              <% if (footer.payment_methods[method]) { %>
-                <i class="pay-icon pay-icon--<%= method %>"></i>
-              <% } %>
-            <% }) %>
-          </p>
-          <div class="footer__stamps">
-            <%- await include(`@/sections/stamps`, { _, opt: { stamps: footer.stamps } }) %>
-          </div>
-        </div>
       </div>
     </div>
 
@@ -214,15 +183,29 @@ const networksWithColors = [
     </div>
   </div>
 </footer>
-
-<div class="ecom-credits">
-  <a href="https://e-com.plus" target="_blank" rel="noopener">
-    Powered by
-    <img
-      src="https://ecom.nyc3.digitaloceanspaces.com/brand/plus/198x43.png"
-      alt="E-Com Plus"
-      width="92"
-      height="19.98"
-    >
-  </a>
+<div class="row" id="informacoes">
+  <div class="container" style="display: flex; margin-top: 1rem">
+    <div class="col-12 col-sm-5" id="selos_pagamentos" style="text-align: left">
+      <h5>Formas de pagamento</h5>
+      <div class="mt-4 mb-3">
+        <p class="footer__payment-methods">
+          <% Object.keys(footer.payment_methods).forEach(method => { %>
+            <% if (footer.payment_methods[method]) { %>
+              <i class="pay-icon pay-icon--<%= method %>"></i>
+            <% } %>
+          <% }) %>
+        </p>
+      </div>
+    </div>
+    <div class="col-12 col-sm-7 text-right" id="selos_seguranca">
+      <h5>Selos e certificados</h5>
+      <div class="container-fluid">
+        <div class="footer__stamps">
+          <%- await include(`@/sections/stamps`, { _, opt: { stamps: footer.stamps } }) %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+
+<% await include('/@/layout/inc/ecom-credits') %>
