--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -8,7 +8,8 @@ body, h1, h2, h3, h4, h5, h6, span, em, small, p, big, strong, b, button, a {
   background-image: linear-gradient(#fff, #dcdcdc);
   a {
     color: #000;
-    padding: 10px 7px;
+    padding: 12px 10px;
+    display: flex;
   }
 }
 // header
@@ -17,10 +18,17 @@ body, h1, h2, h3, h4, h5, h6, span, em, small, p, big, strong, b, button, a {
   padding-left: 0 !important;
   padding-bottom: 0 !important;
   &__nav {
+    display: flex;
+    justify-content: space-between;
     .menu__item-icon {
+      margin-right: 1.75rem;
       img {
-        margin-bottom: 1rem;
+        position: relative;
+        bottom: .5rem;
       }
+    }
+    h4 {
+      margin-bottom: 0;
     }
   }
 }
@@ -31,4 +39,34 @@ body, h1, h2, h3, h4, h5, h6, span, em, small, p, big, strong, b, button, a {
       --banner-aspect-ratio: 1!important;
       height: auto;
   }
+}
+// footer
+.footer {
+  background: url(/img/uploads/end.jpg);
+  &__title {
+    color: #ca0000;
+    font-weight: 400;
+    font-size: 31px;
+    font-family: 'Teko',sans-serif;
+    text-shadow: 1px 1px 1px #000;
+  }
+  h4 {
+    text-align: justify;
+    color: #fff;
+    font-size: 15.4px;
+    font-weight: 300;
+    letter-spacing: 1px;
+  }
+}
+#selos_seguranca {
+  text-align: right;
+  div {
+    display: flex;
+    justify-content: flex-end;
+  }
+}
+#informacoes h5 {
+  color: #ca0000;
+  font-weight: 400;
+  font-size: 31px;
 }
