--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -1,7 +1,22 @@
 // Add your custom CSS here.
 // font
-body, h1, h2, h3, h4, h5, h6, span, em, small, p, big, strong, b, button, a {
-  font-family: 'Teko', sans-serif;
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+span,
+em,
+small,
+p,
+big,
+strong,
+b,
+button,
+a {
+  font-family: "Teko", sans-serif;
 }
 // menu background
 #menu {
@@ -17,6 +32,38 @@ body, h1, h2, h3, h4, h5, h6, span, em, small, p, big, strong, b, button, a {
   padding-right: 0 !important;
   padding-left: 0 !important;
   padding-bottom: 0 !important;
+  background-image: url(/img/uploads/fundo-header.png);
+  border-bottom: 0;
+
+  &__search-btn .fa-search {
+    color: #ca0000;
+  }
+
+  @media (min-width: 768px) {
+    &__logo {
+      max-width: 344px;
+    }
+    &__row {
+      min-height: 80px;
+    }
+  }
+
+  @media (max-width: 767px) {
+    &__toggler-icon {
+      color: #ca0000;
+    }
+    &__buttons img {
+      width: 29px;
+    }
+    #logo-col {
+      display: flex;
+      justify-content: center;
+      img {
+        max-width: 175px;
+      }
+    }
+  }
+
   &__nav {
     display: flex;
     justify-content: space-between;
@@ -24,20 +71,21 @@ body, h1, h2, h3, h4, h5, h6, span, em, small, p, big, strong, b, button, a {
       margin-right: 1.75rem;
       img {
         position: relative;
-        bottom: .5rem;
+        bottom: 0.5rem;
       }
     }
     h4 {
       margin-bottom: 0;
+      font-size: 21px;
     }
   }
 }
 // full banner
-@media(min-width: 768px) {
+@media (min-width: 768px) {
   .banner-slider {
-      max-width: 100%;
-      --banner-aspect-ratio: 1!important;
-      height: auto;
+    max-width: 100%;
+    --banner-aspect-ratio: 1 !important;
+    height: auto;
   }
 }
 // footer
@@ -47,7 +95,7 @@ body, h1, h2, h3, h4, h5, h6, span, em, small, p, big, strong, b, button, a {
     color: #ca0000;
     font-weight: 400;
     font-size: 31px;
-    font-family: 'Teko',sans-serif;
+    font-family: "Teko", sans-serif;
     text-shadow: 1px 1px 1px #000;
   }
   h4 {
@@ -70,3 +118,226 @@ body, h1, h2, h3, h4, h5, h6, span, em, small, p, big, strong, b, button, a {
   font-weight: 400;
   font-size: 31px;
 }
+#search-input {
+  border-radius: 30px;
+}
+.top-bar {
+  background-color: #d10000;
+  * {
+    color: #fff;
+  }
+}
+@media (max-width: 992px) {
+  #search-bar {
+    display: block !important;
+    background-color: #d10000;
+    #search-form {
+      margin-bottom: 0.5rem;
+      margin-top: 0.5rem;
+    }
+  }
+}
+.top-bar__page-links {
+  display: flex;
+  > a, .trigger-rastreio, .chat-title {
+    font-size: 21px !important;
+    font-weight: 300 !important;
+  }
+}
+
+.ico-chat a:hover {
+  color: #6f0202 !important
+}
+//fwr
+.form-rastreio {
+  background: #fff;
+  border: solid 1px #d4d5d6;
+  position: absolute;
+  top: 100%;
+  z-index: 999;
+  -webkit-box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.2);
+  min-width: 295px;
+  left: -90px;
+  min-height: 135px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 10px;
+  opacity: 0;
+  visibility: hidden;
+}
+.trigger-rastreio {
+  cursor: pointer;
+}
+.form-rastreio span {
+  color: #000;
+  font-size: 16px;
+  display: block;
+  margin: 10px 0;
+  font-family: inherit;
+}
+.form-rastreio input {
+  width: 100%;
+  padding: 0 10px;
+  height: 48px;
+  background: #fff;
+  border: solid 1px #e0e0e0;
+  -webkit-box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.2);
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 10px;
+  font-size: 14px;
+  border-radius: 0;
+  margin-bottom: 0;
+  color: #4d4d4d;
+}
+.form-rastreio button {
+  position: absolute;
+  right: 10px;
+  height: 48px;
+  font-size: 18px;
+  line-height: 48px;
+  padding: 0;
+  background: 0 0;
+  border: none;
+}
+.form-rastreio button i {
+  color: #4d4d4d;
+  margin-right: 10px;
+}
+.rastreio:hover .form-rastreio {
+  visibility: visible !important;
+  opacity: 1 !important;
+}
+.wrapper .tooltip {
+  background: #fff;
+  text-align: center;
+  top: 110%;
+  right: 0;
+  font-size: 14px;
+  color: #ca0000 !important;
+  font-weight: 700;
+  display: block;
+  margin-bottom: 15px;
+  opacity: 0;
+  padding: 20px;
+  pointer-events: none;
+  position: absolute;
+  -webkit-transform: translateY(10px);
+  -moz-transform: translateY(10px);
+  -ms-transform: translateY(10px);
+  -o-transform: translateY(10px);
+  transform: translateY(10px);
+  -webkit-transition: all 0.25s ease-out;
+  -moz-transition: all 0.25s ease-out;
+  -ms-transition: all 0.25s ease-out;
+  -o-transition: all 0.25s ease-out;
+  transition: all 0.25s ease-out;
+  -webkit-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+  -moz-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+  -ms-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+  -o-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
+}
+.wrapper .tooltip a:hover {
+  color: #ca0000;
+}
+.wrapper .tooltip:before {
+  bottom: -20px;
+  content: " ";
+  display: block;
+  height: 20px;
+  left: 0;
+  position: absolute;
+  width: 100%;
+}
+.wrapper .tooltip:after {
+  border-left: solid transparent 10px;
+  border-right: solid transparent 10px;
+  border-bottom: solid #ededed 10px;
+  top: -10px;
+  content: " ";
+  height: 0;
+  left: 66%;
+  margin-left: 14px;
+  position: absolute;
+  width: 0;
+}
+.wrapper:hover .tooltip {
+  opacity: 1;
+  pointer-events: auto;
+  -webkit-transform: translateY(0);
+  -moz-transform: translateY(0);
+  -ms-transform: translateY(0);
+  -o-transform: translateY(0);
+  transform: translateY(0);
+}
+.wrapper {
+  z-index: 2000;
+  cursor: help;
+  color: #312655;
+  position: relative;
+  text-align: center;
+  -webkit-transform: translateZ(0);
+  -webkit-font-smoothing: antialiased;
+}
+.telefone {
+  font-size: 16px;
+  font-weight: 500;
+  padding-top: 0;
+  padding-bottom: 0;
+  color: #424242;
+  font-family: "Teko", sans-serif;
+}
+.tel {
+  font-size: 10px;
+  color: #5a5a5a;
+  font-weight: 300;
+  font-family: "Montserrat", serif;
+}
+.num {
+  display: block;
+  margin-top: -12px;
+  font-size: 21px;
+  color: #cb0101;
+  font-weight: 500;
+  font-family: "Teko", sans-serif;
+}
+.divider {
+  height: 0;
+  margin: 9px 1px;
+  overflow: hidden;
+  border-bottom: 1px solid #5a5a5a;
+}
+.emailt {
+  margin-top: 0;
+  font-size: 16px;
+  color: #424242;
+  font-weight: 500;
+  font-family: "Teko", sans-serif;
+}
+.emailp {
+  font-size: 20px;
+  font-weight: 400;
+  color: #cb0101;
+  padding: 0;
+  margin-top: -6px;
+  font-family: "Teko", sans-serif;
+}
+.duvidas {
+  margin-top: 0;
+  font-size: 16px;
+  color: #2d2d2d;
+  font-weight: 500;
+  font-family: "Teko", sans-serif;
+}
+.faleconoscotop a {
+  font-size: 17px;
+  font-weight: 500;
+  color: #cb0101;
+  padding: 0;
+  margin-top: -11px;
+  font-family: "Teko", sans-serif;
+}
+//fim fwr
