--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -145,10 +145,92 @@ a {
   }
 }
 
+.menu__social {
+  display: flex;
+}
+
 .ico-chat a:hover {
   color: #6f0202 !important
 }
+.product-card__buy {
+  z-index: 99999999 !important;
+  button {
+    background-color: #53cc65;
+    border-color: #53cc65;
+    &:hover {
+      background-color: #48AD57;
+    }
+  }
+}
+.product-card__name {
+  text-align: center;
+  color: #000;
+  font-size: 18px;
+  font-weight: 400;
+}
+.product-card__prices {
+  text-align: center;
+  color: #ca0000;
+}
+.products-carousel__title {
+  font-size: 45px;
+  color: #ca0000;
+  &:before {
+    background: none;
+  }
+  & a:hover {
+    text-decoration: none !important;
+  }
+  background: url(/img/uploads/fundo-titulo.png) no-repeat center bottom;
+}
+.product-card__prices {
+  display: flex;
+  .prices__value {
+    display: none;
+  }
+  span {
+    order: -1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    .prices__discount {
+      order: -1;
+      span {
+        font-size: 28px;
+      }
+      small {
+        color: #565658;
+        font-size: 12px;
+      }
+    }
+    .prices__installments {
+      display: flex;
+      justify-content: center;
+      color: #525252 !important;
+      font-size: 20px;
+      span {
+        order: 1;
+        display: flex;
+        padding-left: 5px;
+      }
+    }
+  }
+}
+
 //fwr
+.product-card {
+  //background: url(https://cdn.ecvol.com/s/www.pontualgames.com.br/uploads/desconto-vista.jpg) no-repeat center bottom;
+  &:hover::after {
+    content:" ";
+    width:100%;
+    border:solid 2px #000;
+    height:100%;
+    background:rgba(255,255,255,.5);
+    background-image:url(/img/uploads/comprar-agora3.png);
+    background-position:center 50%;background-repeat:no-repeat;border-radius:0;position:absolute;left:0;top:0;z-index:98}
+}
+
+
 .form-rastreio {
   background: #fff;
   border: solid 1px #d4d5d6;
