--- a/template/pages/@/head.ejs
+++ b/template/pages/@/head.ejs
@@ -26,7 +26,7 @@ if (maintenance.active) {
 <link rel="stylesheet" type="text/css" href="/storefront.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Teko:wght@400;500;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Teko:wght@400;500;700&display=swap" rel="stylesheet">
 
 
 <%
