chore: edit extra pages

--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -354,6 +354,11 @@ li {
   }
 }
 
+.page .content-page {
+  background-color: #f5f5f5;
+  padding: 15px;
+}
+
 //fwr
 // .product-card {
 //   pointer-events: auto;
