build: updating with https://github.com/ecomplus/storefront-starter

--- a/template/pages/@/layout/header.ejs
+++ b/template/pages/@/layout/header.ejs
@@ -257,7 +257,8 @@ if (header.categories_list) {
             href="/app/#/cart"
             title="<%= _.dictionary('openCart') %>"
           >
-            <img src="/img/uploads/carrinho-de-compras.png" alt="Carrinho de Compras">
+        
+            <i class="fas fa-shopping-bag"></i>
             <span id="cart-count" class="badge badge-primary"></span>
           </a>
         </div>
