chore: update header with icon

--- a/template/pages/@/layout/header.ejs
+++ b/template/pages/@/layout/header.ejs
@@ -258,7 +258,7 @@ if (header.categories_list) {
             title="<%= _.dictionary('openCart') %>"
           >
         
-            <i class="fas fa-shopping-bag"></i>
+            <img src="/img/uploads/carrinho-de-compras.png" alt="Carrinho de Compras">
             <span id="cart-count" class="badge badge-primary"></span>
           </a>
         </div>
